k8s/api-gatway-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: usernow/api-gateway
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
  ports:
  - name: api-gateway
    port: 80
    targetPort: 8080
