k8s/config-server-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
spec:
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: usernow/config-server
        imagePullPolicy: Always
        ports:
        - containerPort: 9296

---

apiVersion: v1
kind: Service
metadata:
  name: config-server-srv
spec:
  selector:
    app: config-server
  ports:
  - name: config-server
    protocol: TCP
    port: 80
    targetPort: 9296
