k8s/coupon-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      containers:
      - name: coupon
        image: usernow/coupon-service:latest
        ports:
        - containerPort: 8082
        resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        
                

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 8082
