k8s/stats-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats
  template:
    metadata:
      labels:
        app: stats
    spec:
      containers:
      - name: stats
        image: usernow/stats-service:latest
        ports:
        - containerPort: 8081
        resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        
                

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 8081
