k8s/zipkin-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-srv
spec:
  selector:
    app: zipkin
  ports:
  - port: 9411
    targetPort: 9411

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-lb-srv
spec:
  type: LoadBalancer
  selector:
    app: zipkin
  ports:
  - port: 9411
    targetPort: 9411
